--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,21 @@ html, body {
   margin: auto;
 }
 
+.shirt-wrap p {
+  position: relative;
+  display: flex;
+  color: white;
+  justify-content: center;
+  font-size:100%;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  bottom: 55%;
+  overflow:hidden;
+}
+
+
 .player-name {
   text-align: center;
 }
