--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --svg-colour: blue;
   --svg-second-colour: white;
@@ -17,6 +21,9 @@ body {
 html, body {
   height: 100%;
   width: 100%;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
 
 #root {
@@ -25,17 +32,23 @@ html, body {
   display: flex;
 }
 
+.FootballLogo {
+  max-height: 8vh;
+  max-width: 8vw;
+}
+
 .App {
+}
+
+
+.App-container {
+  width: 100vw;
   display: flex;
-  width: 100%;
-  height: 100vh;
 }
 
 .sidebar {
   display: flex; /*added*/
   flex-direction: column; /*added*/
-  float: left;
-  width: 15%;
 }
 
 .player-text-wrapper {
@@ -55,18 +68,21 @@ html, body {
 
 .pitch {
   float: right;
-  background-color: #3ec902;
+  background-color: #00b300;
   display: grid;
   aspect-ratio: 68 / 105;
-  grid-auto-rows: 1fr
+  grid-auto-rows: 1fr;
+  padding: 0 1rem;
+  height: 100vh;
 }
 
 .pitch-zone {
   min-height: 20px;
-  width: 100%;
+  flex-shrink: 0;
   display: flex;
   justify-content: space-between;
-  padding: 0px 0px 10px;
+  padding: 0 0 10px;
+  min-width: 0;
 }
 
 .pz-duo {
@@ -80,6 +96,10 @@ html, body {
 
 .pz-wide {
   justify-content: space-between;
+}
+
+.pz-padding {
+  padding: 0 !important;
 }
 
 .shirt-wrap {
@@ -99,10 +119,10 @@ html, body {
 }
 
 .mySvg {
-  max-height: 50%;
-  max-width: 50%;
+  max-height: 8vh;
+  max-width: 8vw;
   display: flex;
-  margin: auto;
+  margin: auto auto auto auto;
 }
 
 .mySvgPrimary {
@@ -135,6 +155,11 @@ html, body {
 
 .player-name {
   text-align: center;
+  border: none;
+  background: none;
+  color: white;
+  font-size: 2vmin;
+  text-shadow: 1px 1px black;
 }
 
 input.alt {
